# welcome

./: .gitignore  CMakeLists.txt  ImgsResources.qrc  build-tiger-welcome.sh  icons.qrc  scripts.qrc  tiger-welcome.pro
qml/: main.qml  qml.qrc
qml/Components/: AppListItem.qml  CategoryCard.qml  GlassButton.qml  GlassCard.qml  Icon.qml  qmldir
qml/Screens/: AppsScreen.qml  CommunityScreen.qml  CustomizeScreen.qml  CustomizeScreen.qml.bak  FirstStepsScreen.qml  HubScreen.qml  HubScreen.qml.bak  WelcomeScreen.qml  qmldir
qml/Theme/: TigerTheme.qml  qmldir
src/: main.cpp
src/controllers/: SystemController.cpp  SystemController.h  ThemeController.cpp  ThemeController.h
src/models/: AppCategoryModel.cpp  AppCategoryModel.h  AppListModel.cpp  AppListModel.h
src/providers/: IconProvider.h
